# fine_grained_shm

./: .gitignore  CMakeLists.txt  README.md
ipc/: CMakeLists.txt  client.c  common.h  server.c
shm_mgr/: CMakeLists.txt  malloc.h  manager.h  share_mem.c
